...

                    android:clickable="true"
                    android:fadeScrollbars="true"
                    android:fadingEdge="horizontal"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="OK"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
...
