...
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:background="#ebe6a3" />


        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignLeft="@+id/edt1"
            android:layout_alignStart="@+id/edt1"
...
